--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,8 +34,8 @@
     </string>
     <string name="app_names">Card View</string>
     <string name="action_setting">Settings</string>
-    <string name="action_add_favourite">Add to Favourites</string>
-    <string name="action_play_next">Play Next</string>
-    <string name="backdrop_title">LOVE MUSICS</string>
-    <string name="backdrop_subtitle">This season top 20 music</string>
+    <string name="action_add_favourite">Show Comments</string>
+    <string name="backdrop_title">Total Trip Lists</string>
+    <string name="backdrop_subtitle">Full Trip Lists</string>
+    <string name="title_activity_login_d">Sign in</string>
 </resources>
